update dark mode + perbaikan fitur

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Tentang Saya</a>
                                 </li>
                                 <li class="group">
-                                    <a href="#portofolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
+                                    <a href="#portofolio" class="text-base text-dark dark:text-white py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
                                 </li>
                                 <li class="group">
                                     <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Contact</a>
