--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Blog | slicing</h3>
                 </div>
+                <div class="mb-12 p-4 md:w-1/2 dark:text-white">
+                    <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="dist/img/portfolio/4.png" alt="Tasty-food">
+                    </div>
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Tasty Food | slicing from figma</h3>
+                </div>
             </div>
         </div>
     </section>
