--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Tentang Saya</a>
                                 </li>
                                 <li class="group">
-                                    <a href="#portofolio" class="text-base text-dark dark:text-white py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
+                                    <a href="#portfolio" class="text-base text-dark dark:text-white py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
                                 </li>
                                 <li class="group">
                                     <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Contact</a>
@@ -219,9 +219,9 @@
                 </div>
             </div>
 
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap justify-center">
                 <!-- Phone number -->
-                <div class="w-full px-4 xl:w-1/2">
+                <div class="w-full px-4 xl:w-1/3">
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:shadow-slate-700 dark:bg-dark">
                         <img src="dist/img/whatsapp.png" alt="my whatsapp" width="100%">
                         <div class="py-8 px-6">
@@ -235,7 +235,7 @@
                     </div>
                 </div>
                 <!-- email -->
-                <div class="w-full px-4 xl:w-1/2">
+                <div class="w-full px-4 xl:w-1/3">
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:shadow-slate-700 dark:bg-dark">
                         <img src="dist/img/email.png" alt="my whatsapp" width="100%">
                         <div class="py-8 px-6">
@@ -308,7 +308,7 @@
              <svg width="20" class="fill-current" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Tiktok</title><path d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z"/></svg>
          </a>
             </div>
-            <p class="font-medium text-xs text-slate-500 text-center">Dibuat oleh <a href="https://www.instagram.com/pahlefi_iza/" class="font-bold text-primary">Pahlefi Iza Mahendra</a>, menggunakan <a href="https://tailwindcss.com/" target="_blank" class="font-bold text-sky-600">Tailwind CSS</a></p>
+            <p class="font-medium text-xs text-slate-500 text-center">Dibuat oleh <a href="https://www.instagram.com/pahlefi_iza/" target="_blank" class="font-bold text-primary">Pahlefi Iza Mahendra</a>, menggunakan <a href="https://tailwindcss.com/" target="_blank" class="font-bold text-sky-600">Tailwind CSS</a></p>
         </div>
     </footer>
     <!-- Footer section akhir -->
