--- a/index.html
+++ b/index.html
@@ -185,29 +185,67 @@
                         <img src="dist/img/portfolio/1.png" alt="Rumah-Impian">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Rumah Impian | slicing from figma</h3>
+                    <a href="https://palepiiza.github.io/Rumah-Impian/" target="_blank" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80 transition duration-300 ease-in-out">Click Here</a>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 dark:text-white">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/portfolio/2.png" alt="Rumah-Impian">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Travel web</h3>
+                    <a href="https://palepiiza.github.io/travel/" target="_blank" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80 transition duration-300 ease-in-out">Click Here</a>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 dark:text-white">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/portfolio/3.png" alt="Rumah-Impian">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Blog | slicing</h3>
+                    <a href="https://palepiiza.github.io/Blog-slicing/" target="_blank" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80 transition duration-300 ease-in-out">Click Here</a>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 dark:text-white">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/portfolio/4.png" alt="Tasty-food">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Tasty Food | slicing from figma</h3>
+                    <a href="https://palepiiza.github.io/tastyfood.github.io/" target="_blank" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80 transition duration-300 ease-in-out">Click Here</a>
                 </div>
             </div>
         </div>
     </section>
     <!-- Portfolio section akhir -->
+
+    <!-- Canva start -->
+    <section id="portfolio" class="pt-36 pb-16 bg-slate-100 dark:bg-dark">
+        <div class="container">
+            <div class="w-full px-4">
+                <div class="max-w-full mx-auto text-center mb-16">
+                    <h4 class="font-semibold text-primary text-lg mb-2">Portfolio</h4>
+                    <h2 class="font-bold text-dark text-3xl mb-4 dark:text-white">From Canva</h2>
+                </div>
+            </div>
+
+            <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+                <div class="mb-12 p-4 md:w-1/2 dark:text-white">
+                    <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="dist/img/portfolio/Gerakan Sholat Subuh Berjamaah Masjid Imam Bonjol.png" alt="Rumah-Impian">
+                    </div>
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">GSSB | Masjid Imam Bonjol</h3>
+                </div>
+                <div class="mb-12 p-4 md:w-1/2 dark:text-white">
+                    <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="dist/img/portfolio/Kajian kitab Riyadhus salihin.png" alt="Rumah-Impian">
+                    </div>
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Kajian Kitab | Masjid Imam Bonjol</h3>
+                </div>
+                <div class="mb-12 p-4 md:w-1/2 dark:text-white">
+                    <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="dist/img/portfolio/Kajian Subuh.png" alt="Rumah-Impian">
+                    </div>
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Kajian Subuh | Masjid Imam Bonjol</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Canva end -->
 
     <!-- Contact section awal -->
     <section id="contact" class="pt-36 pb-32 dark:bg-four">
